@@ -98,7 +98,7 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Name: tiff_test
+ * Name: tiff_main/user_start
  *
  * Description:
  *   TIFF unit test.
